<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright 2007, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<resources>

    <string name="app_name">Statsd Dogfood</string>

    <string name="statsd_running">Statsd Running</string>
    <string name="statsd_not_running">Statsd NOT Running</string>

    <string name="push_config">Push baseline config</string>
    <string name="set_receiver">Set pendingintent</string>
    <string name="remove_receiver">Remove pendingintent</string>

    <string name="app_a_foreground">App A foreground</string>
    <string name="app_b_foreground">App B foreground</string>


    <string name="app_a_get_wl1">App A get wl_1</string>
    <string name="app_a_release_wl1">App A release wl_1</string>

    <string name="app_a_get_wl2">App A get wl_2</string>
    <string name="app_a_release_wl2">App A release wl_2</string>

    <string name="app_b_get_wl1">App B get wl_1</string>
    <string name="app_b_release_wl1">App B release wl_1</string>

    <string name="app_b_get_wl2">App B get wl_2</string>
    <string name="app_b_release_wl2">App B release wl_2</string>

    <string name="plug">Plug</string>
    <string name="unplug">Unplug</string>

    <string name="screen_on">Screen On</string>
    <string name="screen_off">Screen Off</string>

    <string name="custom_start">App hook start</string>
    <string name="custom_stop">App hook stop</string>

    <string name="dump">DumpReport</string>
    <string name="report_header">Report details</string>
</resources>
