<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright 2007, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/push_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:text="@string/push_config"/>
        <Button
                android:id="@+id/set_receiver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_green_light"
                android:text="@string/set_receiver"/>
        <Button
                android:id="@+id/remove_receiver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_green_light"
                android:text="@string/remove_receiver"/>

        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button android:id="@+id/app_a_wake_lock_acquire1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_a_get_wl1"/>
            <Button android:id="@+id/app_a_wake_lock_release1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_a_release_wl1"/>
        </LinearLayout>

        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button android:id="@+id/app_a_wake_lock_acquire2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_a_get_wl2"/>
            <Button android:id="@+id/app_a_wake_lock_release2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_a_release_wl2"/>
        </LinearLayout>

        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button android:id="@+id/app_b_wake_lock_acquire1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_b_get_wl1"/>
            <Button android:id="@+id/app_b_wake_lock_release1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_b_release_wl1"/>
        </LinearLayout>
        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button android:id="@+id/app_b_wake_lock_acquire2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_b_get_wl2"/>
            <Button android:id="@+id/app_b_wake_lock_release2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_b_release_wl2"/>
        </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button android:id="@+id/plug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plug"/>

        <Button android:id="@+id/unplug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unplug"/>
    </LinearLayout>

        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button android:id="@+id/screen_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/screen_on"/>

            <Button android:id="@+id/screen_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/screen_off"/>
        </LinearLayout>

        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/custom_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_start" />

            <Button
                android:id="@+id/custom_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_stop" />
        </LinearLayout>

        <Button android:id="@+id/dump"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_purple"
            android:text="@string/dump"/>

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_header"/>

        <TextView
            android:id="@+id/report_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>